# Renderer

./: .gitignore  CMakeLists.txt  geometry.h  main.cpp  output.tga
include/: geometry.h  gl.h  model.h  tgaimage.h
src/: geometry.cpp  gl.cpp  main.cpp  model.cpp  tgaimage.cpp
